--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -16,13 +16,13 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Set up JDK 16
+    - name: Setup JDK16
       uses: actions/setup-java@v3
       with:          
         distribution: 'adopt'          
         java-version: '16'
 
-    - name: Build with Maven
+    - name: Build
       working-directory: backend        
       run: mvn package -DskipTests=true
 
@@ -32,10 +32,10 @@ jobs:
 
     - name: Checkstyle
       working-directory: backend
-      continue-on-error: true
       run: mvn checkstyle:checkstyle
 
     - name: SpotBugs
       working-directory: backend
+      continue-on-error: true
       run: mvn spotbugs:check
   
