--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Build
       working-directory: backend        
-      run: mvn package -DskipTests=true
+      run: mvn package -DskipTests=true -X
 
     - name: Test
       working-directory: backend        
@@ -34,8 +34,8 @@ jobs:
       working-directory: backend
       run: mvn checkstyle:checkstyle
 
-    - name: SpotBugs
+    - name: SpotBugs checks
       working-directory: backend
-      continue-on-error: true
       run: mvn spotbugs:check
+      continue-on-error: true
   
