--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -28,3 +28,13 @@ jobs:
     - name: Build
       working-directory: frontend
       run: npm run build
+
+    - name: Create arhive
+      working-directory: frontend
+      run: tar -czvf sausage-store-${APP_VERSION}.${GITHUB_SHA:0:7}.tar.gz -C dist/frontend .
+
+    - name: Upload archive
+      uses: actions/upload-artifact@v3
+      with:
+        name: frontend-archive
+        path: frontend/sausage-store-*.tar.gz
