--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -11,6 +11,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      APP_VERSION: '1.0'
 
     steps:
     - name: Checkout repository
@@ -38,4 +40,17 @@ jobs:
       working-directory: backend
       run: mvn spotbugs:check
       continue-on-error: true
+
+    - name: Create jar
+      working-directory: backend
+      run: mvn package -Dversion.application=${APP_VERSION}.${GITHUB_SHA:0:7}
+
+    - name: Upload jar
+      uses: action/upload-artifact@vb4
+      with:
+        name: backend-archive
+        path: backend/target/*.jar
+
+
+
   
