--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -11,6 +11,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      APP_VERSION: '1.0'
 
     steps:
     - name: Checkout repository
@@ -22,7 +24,7 @@ jobs:
         node-version: '14'
 
     - name: Install deps
-      working-directory: frontend        
+      working-directory: frontend
       run: npm install
 
     - name: Build
